[UP] Dependencies versions [ADD] prices interface